Fix blog padding and overflow

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -2,6 +2,10 @@
   font-family: "Roboto";
 }
 
+a{
+  word-break: break-all;
+}
+
 body {
   overflow-x: hidden;
 }
